--- a/Site/Welcome.html
+++ b/Site/Welcome.html
@@ -127,7 +127,7 @@ new NavBar('widget0', 'Scripts/Widgets/Navbar', 'Scripts/Widgets/SharedResources
             <div id="id3" style="height: 26px; left: 139px; position: absolute; top: 543px; width: 231px; z-index: 1; " class="style_SkipStroke_3 shape-with-text">
               <div class="text-content graphic_textbox_layout_style_default_External_231_26" style="padding: 0px; ">
                 <div class="graphic_textbox_layout_style_default">
-                  <p style="padding-bottom: 0pt; padding-top: 0pt; " class="Free_Form">lal (dot) sunil (at) ieee (dot) org</p>
+                  <p style="padding-bottom: 0pt; padding-top: 0pt; " class="Free_Form">lal (dot) sunil (at) gmail (dot) com</p>
                 </div>
               </div>
             </div>
